; ModuleID = '/home/carl/AnghaBench/Mirai-Source-Code/mirai/tools/extr_wget.c_xsocket.c'
source_filename = "/home/carl/AnghaBench/Mirai-Source-Code/mirai/tools/extr_wget.c_xsocket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.anon = type { i32, i32, i32 }

@SYS_socketcall = common dso_local global i32 0, align 4
@SYS_socket = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xsocket(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.anon, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = getelementptr inbounds %struct.anon, %struct.anon* %7, i32 0, i32 0
  store i32 %8, i32* %9, align 4
  %10 = load i32, i32* %5, align 4
  %11 = getelementptr inbounds %struct.anon, %struct.anon* %7, i32 0, i32 1
  store i32 %10, i32* %11, align 4
  %12 = load i32, i32* %6, align 4
  %13 = getelementptr inbounds %struct.anon, %struct.anon* %7, i32 0, i32 2
  store i32 %12, i32* %13, align 4
  %14 = load i32, i32* @SYS_socketcall, align 4
  %15 = call i32 @SCN(i32 %14)
  %16 = call i32 (i32, i32, ...) @syscall(i32 %15, i32 1, %struct.anon* %7)
  ret i32 %16
}

declare dso_local i32 @syscall(i32, i32, ...) #1

declare dso_local i32 @SCN(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
